2010-07-06  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lMatrix.R (whichDense): use arrayInd()
	* R/zzz.R (arrayInd): provide for older R versions

2010-07-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/chm_common.c (chm_triplet_to_SEXP): deal more carefully with
	NAs, needed e.g., on Solaris; thanks to Ruth and Brian Ripley.

	* R/Ops.R (Compare <Csparse>): fix bug uncovered by "alongside" the
	above.

2010-07-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (x[] <- 0): fix shortcut code.
	* tests/indexing.R: and test

	* R/nearPD.R (nearPD): 'doDykstra = TRUE' and *do* use Dykstra's
	correction which was *not* used in Jens' code; thanks to Bernhard
	Spangl for a report

2010-06-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R: fix mean() method; add sparse one, remaining sparse
	at least for trim = 0.

2010-06-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.999375-41, CRAN-released: 2010-07-03, r 2555

	* R/sparseVector.R (spV2M): enable sparseVector -> (sparse)Matrix
	as(*,.) coercion.

2010-06-07  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Tsparse.R (.TM.repl.i.mat): renamed from .TM.repl.i.2col().
	* R/Matrix.R (.repl.i.lSMat): implement logical sparse
	sub-assignment: M[<lsparseMatrix>] <- v; ditto for dense & nsparse.

	* R/Csparse.R (.CM.repl.i.lSMat, ..): direct logical sparse
	sub-assignment for "Csparse".

2010-06-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (sparseMatrix): re-enable 'dimnames' argument.

2010-06-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (model.Matrix): tweak for NULL contrasts in dense case.

2010-06-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/spModel.matrix.R (Sparse.model.matrix): adapt to the fact, that
	sparse.model.matrix() returns not just a dgCMatrix.

2010-05-29  Martin Maechler  <maechler@stat.math.ethz.ch>
