@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-42
-Date: 2010-..-..
+Date: 2010-07-12
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
