@@ -374,3 +374,10 @@
   ~/src/octave-3.2.4/scripts/linear-algebra/condest.m
 
   ==> own condest(), and onenormest() functions
+
+- Think of defining a "choleskyFactorization" class (slot 'Dim', "Virtual")
+  which is basically a class union of  "Cholesky" and "CHMfactor".
+  -> makes sense for "predModule" (which then can contain 'fac')
+  -> also in other (lme4a ?) cases where we may not yet know if we are
+     talking about a dense or sparse cholesky factor.
+
