@@ -174,6 +174,7 @@ exportClasses(
 	      ## --- 'MatrixFactorization' mother and all its daughters : ---
 
 	      "MatrixFactorization",
+	      "CholeskyFactorization",
 
 	      "LU",
 	      "denseLU",
@@ -211,7 +212,7 @@ exportClasses(
               "nlsRespMod",          # nonlinear regression response
               "nglmRespMod",         # generalized nonlinear
 
-              "lpMod"
+              "glpModel"
 	      )
 
 
