@@ -38,30 +38,11 @@ mkRespMod(fr, family = NULL, nlenv = NULL, nlmod = NULL)
   an object of a class inheriting from \code{\linkS4class{respModule}}.
 }
 %\references{}
-%\author{}
-%\note{}
+%\author{Doug Bates}
 \seealso{
   The \code{\linkS4class{respModule}} class description.
 }
 \examples{
-data(CO2, package="datasets")
-## dense linear model
-str(Matrix:::glm1(uptake ~ 0 + Type*Treatment, data=CO2, doFit = FALSE))
-## sparse linear model
-str(Matrix:::glm1(uptake ~ 0 + Type*Treatment, data=CO2, sparse = TRUE, doFit = FALSE))
-## From example(glm)
-str(trial <- data.frame(counts=c(18,17,15,20,10,20,25,13,12),
-                        outcome=gl(3,1,9,labels=LETTERS[1:3]),
-                        treatment=gl(3,3,labels=letters[1:3])))
-## dense generalized linear model
-str(Matrix:::glm1(counts ~ outcome + treatment, poisson, trial, verbose = TRUE))
-## sparse generalized linear model
-str(Matrix:::glm1(counts ~ outcome + treatment, poisson, trial, verbose
-= TRUE, sparse = TRUE))
-# A Gamma example, from McCullagh & Nelder (1989, pp. 300-2)
-clotting <- data.frame(u = c(5,10,15,20,30,40,60,80,100),
-                       lot1 = c(118,58,42,35,27,25,21,19,18),
-                       lot2 = c(69,35,26,21,18,16,13,12,12))
-str(Matrix:::glm1(lot1 ~ log(u), data=clotting, family=Gamma, verbose=TRUE))
+  ## see  help("glpModel-class")
 }
 \keyword{models}
